# RGBDSLAM

./: .gitignore  .gitmodules  CMakeLists.txt  DepthCamera_2023-05-03-19-17-02.json  README.md  ceres_test.cpp  feature_match.py  frame_listener.py  frame_sampler.py  image_matching.cpp  internal_math.py  kinect_preprocess.py  mobrgbd.py  play_frames.py  plot_imu_output.py  pose_graph.py  print_stats.py  save_frame.py  save_kinect_params.py  test.py  test_rgb.py  view_map.py  visualize_pg.py
docs/: FutureWork.md  code-summary.md
