cmake_minimum_required(VERSION 3.10)

project(image_matching)
set(CMAKE_CXX_STANDARD 20)
set(CXX_STANDARD_REQUIRED TRUE)
set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra -march=native")
set(LIBNPY_INCLUDE_DIR third_party/libnpy/include)
set(LIBXOSHIRO_INCLUDE_DIR third_party/Xoshiro-cpp)
set(SOURCE_FILES image_matching.cpp ${LIBNPY_INCLUDE_DIR}/npy.hpp)
find_package(OpenCV REQUIRED)
find_package(nlohmann_json REQUIRED)
find_package(Eigen3 REQUIRED NO_MODULE)
set(freenect2_DIR /home/shahe/sources/libfreenect2/build)
find_package(freenect2 REQUIRED)
add_executable(image_matching.out ${SOURCE_FILES})
target_include_directories(image_matching.out PRIVATE ${LIBNPY_INCLUDE_DIR} ${freenect2_INCLUDE_DIR} ${LIBXOSHIRO_INCLUDE_DIR})
target_link_libraries(image_matching.out ${OpenCV_LIBS} ${nlohmann_json_LIBS} ${freenect2_LIBRARIES} Eigen3::Eigen)
